Sun Mar 14 01:01:18 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcellview.c (gtk_cell_view_set_cell_data): Align
	this function with gtk_tree_view_column_set_cell_data();
	call the cell data func after setting the attributes.

Sun Mar 14 01:00:08 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcellview.c (gtk_cell_view_expose): One more try;
	make sure not to call gtk_cell_view_set_cell_data() when
	displayed_row is NULL.

Sat Mar 13 18:13:13 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextlayout.c (gtk_text_layout_get_line_display): When not
	wrapping, do the offset of the line for justification ourselves.
	(#120256, Felipe Heidrich)

Sun Mar 14 00:03:18 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcellview.c (gtk_cell_view_expose): Support the
	model-less use of GtkCellView shown in testcombo.c.

2004-03-13  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkdisplay-win32.c: Don't undefine HAVE_MONITOR_INFO
	when compiling with gcc. Mingw's headers do have the required
	definitions.

	* gdk/win32/gdkdrawable-win32.c (draw_polygon): When drawing
	filled polygons, don't draw the outline, similarily as
	draw_rectangle(). Apparently GTK and GIMP don't use
	gdk_draw_polygon() much (or always draw the outline, too), as this
	has gone undetected for so long. Thanks to Bruce Hochstetler.

Sat Mar 13 15:19:17 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c (gtk_window_destroy): Remove
	the window from the toplevel_list here rather in destroy.
	While this is theoretically speaking wrong, it fits
	in better with the current reality that destroyed
	widgets are not reusable. (#126808, Michael Natterer)

Sat Mar 13 21:47:47 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcellview.c (gtk_cell_view_expose): Don't do anything
	beyond clearing to the background if there is no active row.
	(#137066, reported by Owen Taylor)

Sat Mar 13 21:37:44 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_list_key_press): Pop down the