@@ -249,6 +249,8 @@ gtk_public_h_sources =		\
 	gtkaccellabel.h		\
 	gtkaccelmap.h		\
 	gtkaccessible.h \
+	gtkaction.h		\
+	gtkactiongroup.h	\
 	gtkadjustment.h		\
 	gtkalignment.h		\
 	gtkarrow.h		\
@@ -274,6 +276,8 @@ gtk_public_h_sources =		\
 	gtkcolorsel.h		\
 	gtkcolorseldialog.h	\
 	gtkcombo.h		\
+	gtkcombobox.h		\
+	gtkcomboboxentry.h	\
 	gtkcontainer.h		\
 	gtkctree.h		\
 	gtkcurve.h		\
@@ -343,6 +347,7 @@ gtk_public_h_sources =		\
 	gtkprivate.h		\
 	gtkprogress.h		\
 	gtkprogressbar.h	\
+	gtkradioaction.h	\
 	gtkradiobutton.h	\
 	gtkradiomenuitem.h	\
 	gtkradiotoolbutton.h	\
@@ -378,6 +383,7 @@ gtk_public_h_sources =		\
 	gtktexttagtable.h	\
 	gtktextview.h		\
 	gtktipsquery.h		\
+	gtktoggleaction.h	\
 	gtktogglebutton.h	\
 	gtktoggletoolbutton.h	\
 	gtktoolbar.h		\
@@ -396,6 +402,7 @@ gtk_public_h_sources =		\
 	gtktreeview.h		\
 	gtktreeviewcolumn.h	\
 	gtktypeutils.h		\
+	gtkuimanager.h	\
 	gtkvbbox.h		\
 	gtkvbox.h		\
 	gtkviewport.h		\
